--- a/Matts Easy Pokemon Guessing Game/views/home.html
+++ b/Matts Easy Pokemon Guessing Game/views/home.html
@@ -1,3 +1,9 @@
+</div>
 <div data-role="view" data-title="Home" data-layout="main" data-model="APP.models.home">
-  <h1 data-bind="html: title"></h1>
+    <h1 data-bind="html: StatusText"></h1>
+    <div>
+        <button data-bind="click: listener">Start</button>
+    </div>
+    <img data-bind="attr: { src:  CurrentPokemonImage }" height="180" />
+</div>
 </div>
