Changes made by Daryl Schroeder (daryl.schroeder@intergraph.com).

--- a/Matts Easy Pokemon Guessing Game/styles/home.css
+++ b/Matts Easy Pokemon Guessing Game/styles/home.css
@@ -1,6 +1,5 @@
 #GameStatusCounts
 {
-    float:right;
     color:blue;
 }
 #StatusArea
@@ -9,4 +8,8 @@
     margin: 0 auto;
     font-size:125%;
     float:center;
+}
+
+body {
+    display: table;
 }
