--- a/Matts Easy Pokemon Guessing Game/views/home.html
+++ b/Matts Easy Pokemon Guessing Game/views/home.html
@@ -5,7 +5,7 @@
     <table align="center" >
         <tr>
             <td>
-                <img class="centeredImage" data-bind="attr: { src:  CurrentPokemonImage }" height="250" />
+                <img class="centeredImage" id="currentImage" data-bind="attr: { src:  CurrentPokemonImage }" height="250" />
             </td>
         </tr>
         <tr>
